<resources>
    <string name="app_name">SIGNING_APP</string>
    <string name="title_activity_female">Female</string>

    <string name="bankChecking">Add</string>
    <string name="Banking">ADD PERSON</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigatio_drawer_close</string>
    <string name="mal">Male</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="male">Male</string>
    <string name="Name">Last Name</string>
    <string name="PostName">Middle Name</string>
    <string name="FirstName">First Name</string>
    <string name="btnAdd">ADD</string>
    <string name="Phone">Marital Status</string>
    <string name="ShowList">SHOW</string>
    <string name="write_here">Write here</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="married">Married</string>
    <string name="divorced">Divorced</string>
    <string name="widow">Widow</string>
    <string name="single">Single</string>
    <string name="button">Choose</string>

    <string-array name="format">
        <item>WOMAN</item>
        <item>MAN</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">START</string>
    <string name="mbutton">LAST-IN</string>
</resources>
