<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    style="@style/Widget.MaterialComponents.TabLayout.PrimarySurface"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="312dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="116dp"
                android:layout_height="46dp"
                android:text="@string/Name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"

                android:textColor="@color/editgroud"
                android:textStyle="italic|bold" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="291dp"
                android:layout_height="46dp"
                android:background="@drawable/edittext"
                android:hint="@string/write_here"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="116dp"
                android:layout_height="46dp"
                android:text="@string/PostName"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"

                android:textColor="@color/editgroud"
                android:textStyle="italic|bold" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="294dp"
                android:layout_height="46dp"
                android:background="@drawable/edittext"
                android:hint="@string/write_here"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="116dp"
                android:layout_height="46dp"
                android:text="@string/FirstName"

                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/editgroud"
                android:textStyle="italic|bold" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="294dp"
                android:layout_height="46dp"
                android:background="@drawable/edittext"
                android:hint="@string/write_here"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:text="@string/Phone"

                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/editgroud"
                android:textStyle="italic|bold" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="294dp"
                android:layout_height="46dp"
                android:background="@drawable/edittext"
                android:hint="@string/write_here"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="113dp"
                android:layout_height="match_parent"
                android:background="@color/darker_grey"
                android:backgroundTint="@color/colorAccent"
                android:src="@drawable/ic_done_black_24dp" />

            <Button
                android:id="@+id/shareref"
                android:layout_width="128dp"
                android:layout_height="59dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="3dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittextstyle"
                android:text="@string/mbutton"

                android:textColor="@color/editgroud" />

            <Button
                android:id="@+id/button"
                android:layout_width="128dp"
                android:layout_height="59dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittextstyle"
                android:onClick="onClick"

                android:text="@string/btnAdd"
                android:textColor="@color/editgroud" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="291dp"
        android:layout_gravity="start"
        android:orientation="horizontal">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="310dp"
            android:layout_height="match_parent"
            android:background="@color/editgroud" />

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="102dp"
            android:layout_height="214dp"
            android:orientation="vertical"

            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"

            >

            <RadioButton
                android:id="@+id/married"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"

                android:text="@string/married"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/editgroud" />

            <RadioButton
                android:id="@+id/divorced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/divorced"

                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/editgroud"


                />

            <RadioButton
                android:id="@+id/widow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/widow"

                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/editgroud"


                />

            <RadioButton
                android:id="@+id/single"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/single"

                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/editgroud"


                />

        </RadioGroup>


    </LinearLayout>


</LinearLayout>
